@@ -1,4 +1,4 @@
-DIST biber-1.6.tar.gz 2003903 SHA256 acfe34134fbaf81970afffc583ca173e2b6d3d3c32e62106caf140beb4fd8a8d SHA512 cbc2c1f4c8fc20291d427e161cbeaa2c342b0be464ba697387c642cf0a697df88d05dd1a27fa15a18292871328f9e9b0370ea461690ef28c3803d0ce8091e824 WHIRLPOOL 30945d1a0ad79fe97c9af31673c829d1b23a848f11f0244384b7c17ac5c27c78674ea5cdab3b26c99be4871f4cae6aba80ddb26a3c4cfdf9de233c98188698df
-EBUILD biber-1.6.ebuild 1305 SHA256 6b67e27da9ef3ba1c1a1a02a507a484fced7c62cdbc6ed48c3d158cd04dcf288 SHA512 f508ad5fc632effcb1068e9feb1a3306d89a2173e23f4f7fbbf7657076ae1215e2f98879278add63955925c7a2b50df03f3ab4c6a8d6bef141f49de95c2afa32 WHIRLPOOL 0cd14a6570aa825ccd8a5aa6d591de7bb279640c961f548763921887a87c5997e296166d3e8d5acbee6eeb5f88bd3afe41915b3fb348a09cffe6ea2ed8264df0
-MISC ChangeLog 979 SHA256 2fc267ee0018540ab397189610dfd4c0e2bc4bd809c6fe10664e83cc15739869 SHA512 00113af087113eb317749917e3bb6c587f2d6f17b651b27d133e6b5d1a204f7c1b7e9c5c02661e4fa284240a56a052bb06ed95013a683d07cb5ee13673a40515 WHIRLPOOL 2e24785ba26bbc07b55a166a97c3eeac729a8bc70e8370273014b759ea4dce6d7bc9c0bd6c9cea78769cf34240fca88be8cd987c1ffdac959b6a2354deeb6d27
+DIST biber-1.6.tar.gz 2010041 SHA256 e689e08ef03f6a6c8df6756071d6d574a36288f605ed8a47925566f84943822c SHA512 fcbd486f163e1e4d348973ba759526107a7771ad9f471617f264d2c77afd6951cdf9806bdd81533a8064a0bc64cc5b50801ffbca1c96caf017fed479ecd867dd WHIRLPOOL 24a1f922586c635234e3b8bde9a4dce6aae95c582c59bd50cd07cd825235ceb63bddea6cd6495cf22bbc3d81b7871dc7f5a133bcef2190dff86b5ad64a832c00
+EBUILD biber-1.6.ebuild 1379 SHA256 d87e7ab037727a1601dc0c9acb21e88b13f8f0a714b881275141257b7c8fe836 SHA512 ff0f453c7a514577ae0029861ddd4e17ef8086d86b6fc1f5cea730eeb8028f51eba16a9e269064118a65b47d6fcd00410233a6553bc31eb2aa5ef7fa7b25280c WHIRLPOOL f943f7da68e3909d47ce5c6f286e0fb93285b61c27b7edbaaa6eaf2560050b659c3c22ddfbd6a261d44f5178736e62baa3e661a16d9d43361f3986e088a9d15c
+MISC ChangeLog 1097 SHA256 caf2543dfed6307c5af03f3191984c2cf44403db94e60bade92379816551861d SHA512 a321bf8fb0556c50dfa60428c0a65dcf2589f797e535a2c48cc51601a81d57590b6ef82b1c712ef533bd4efe570e5f70afc2fa885b968c5d4c9071814f613487 WHIRLPOOL 0efa31e009a69c31ea4276f512681feb1105eba59c539766ff31a3ad25e85bc02430c2e8b46499ca29c7740e39d49f309d505a303d3f68a04267e404bd54c522
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
