@@ -1,3 +1,6 @@
+  19 May 2013; Manuel Rueger (mrueg) gentoo@rueg.eu biber-1.6.ebuild:
+  dev-tex/biber: Fix manifest, add doc useflag
+
 *biber-1.6 (01 May 2013)
 
   01 May 2013; Manuel Rueger (mrueg) gentoo@rueg.eu +biber-1.6.ebuild,
